Adding doc for the this keyword

--- a/_css/style.css
+++ b/_css/style.css
@@ -78,6 +78,9 @@ ___________________________________________________*/
   color: #ff2c2c;
 }
 
+.code-comment {
+  color: gray;
+}
 .breadcrumb-container {
   background-color: #000;
 }
