--- a/_css/style.css
+++ b/_css/style.css
@@ -9,38 +9,63 @@ body {
 }
 
 h1 {
-  font-size: 3.2rem;
+  font-size: 2.8rem;
   margin-top: 80px;
   margin-bottom: 20px;
-  color: #ffcd2f;
-  border-bottom: 2px solid #776a6a;
+  /* background-color: #c3c3c3; */
+  background-color: #000;
+  color: #ffb200;
+  background-image: url("textures/asfalt-dark.png");
+  border-left: 1px solid #ffb200;
+  border-right: 1px solid #ffb200;
+  border-bottom: 2px solid #ffb200;
   padding: 10px 0;
-  /* text-align: center; */
+  text-align: center;
+  border-radius: 10px;
 }
 
 h2 {
-  padding-bottom: 15px;
+  padding-bottom: 10px;
+  padding-left: 8px;
   margin-top: 50px;
-  font-size: 2.6rem;
-  color: #ffaa3f;
+  font-size: 2.3rem;
+  /* background-color: #00a1df; */
+  background-color: #0e0e0e;
+  background-image: url("textures/asfalt-dark.png");
+  color: #00a1df;
   margin-bottom: 20px;
-  border-bottom: 2px solid #776a6a;
-  /* Dark Gold */
+  border-left: 1px solid #00a1df;
+  /* border-right: 1px solid #00a1df; */
+  border-bottom: 2px solid #00a1df;
+  /* text-align: center; */
+  border-radius: 10px;
 }
 
 h3 {
+  padding-left: 5px;
+  padding-bottom: 10px;
+  background-color: #0e0e0e;
   font-size: 1.8rem;
   margin-top: 30px;
+  margin-bottom: 20px;
   color: #00ff88;
   padding-top: 20px;
   /* GREEN */
   /* color: #ff5f5f; RED*/
+  border-radius: 10px;
+  border-left: 1px solid #00ff88;
+  border-bottom: 2px solid #00ff88;
 }
 
 h4 {
+  /* background-color: #0e0e0e; */
   font-size: 1.3rem;
   color: #ff6767;
   padding: 1rem 0;
+  padding-left: 8px;
+  /* border-left: 2px solid #000; */
+  border-bottom: 3px solid #000;
+  border-radius: 10px;
 }
 
 h5 {
