new array pages

--- a/_css/style.css
+++ b/_css/style.css
@@ -103,6 +103,10 @@ ___________________________________________________*/
   color: #ffbf00;
 }
 
+.no-bullets {
+  list-style: none;
+  font-weight: bolder;
+}
 /*___________________________________________________
 Note boxes
 ___________________________________________________*/
