--- a/_css/style.css
+++ b/_css/style.css
@@ -58,7 +58,7 @@ h4 {
 }
 
 h5 {
-  color: #a3dc90;
+  color: #bbbbbb;
 }
 
 /*___________________________________________________
@@ -97,7 +97,7 @@ ___________________________________________________*/
 }
 
 .code-output {
-  color: #a3dc90;
+  color: #9c9c9c;
 }
 
 .breadcrumb-container {
