--- a/_css/style.css
+++ b/_css/style.css
@@ -125,7 +125,7 @@ ___________________________________________________*/
 }
 
 .code-css {
-    color: #ffe500;
+    color: #e2dc00;
 }
 
 .code-js {
@@ -234,10 +234,6 @@ ___________________________________________________*/
 /*___________________________________________________
 Text Colors
 ___________________________________________________*/
-
-.code-css {
-    color: yellow;
-}
 
 .code-html {
     color: #ff9d39;
